5.create_deployment_apachephp-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apachephp-select
  namespace: ns-phpmysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache-select
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apache-select
    spec:
      containers:
        - image: ousema2003/k8s:apachephp-select
          name: apachephpselect
          ports:
            - containerPort: 8080
              name: mapache-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apachephp-insert
  namespace: ns-phpmysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache-insert
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apache-insert
    spec:
      containers:
        - image: ousema2003/k8s:apachephp-insert
          name: apachephpinsert
          ports:
            - containerPort: 8080
              name: mapache-port
...
