4.create_service_mysql-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mysqldb
  namespace: ns-phpmysql
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
...
