6.create_service_apachephp-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-apache-clusterip
  namespace: ns-demo-phpmysql
spec:
  selector:
    app: apache
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-apache-nodeport
  namespace: ns-demo-phpmysql
spec:
  selector:
    app: apache
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
    nodePort: 31113
  type: NodePort
...
